# libstc

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  graph.hpp  list.hpp  queue.hpp  stack.hpp  tree.hpp  xlist.hpp
src/nodes/: node.hpp  node_dl.hpp  node_dll.hpp  node_xl.hpp
tests/: CMakeLists.txt
tests/graph_test/: CMakeLists.txt  tst_testgraph.cpp
tests/list_test/: CMakeLists.txt  tst_testlist.cpp
tests/queue_test/: CMakeLists.txt  tst_testqueue.cpp
tests/stack_test/: CMakeLists.txt  tst_teststack.cpp
tests/xor_list_test/: CMakeLists.txt  tst_xorlisttest.cpp
